objects/BigMachines__Quote__c.object
<CustomObject>
    <description>An Oracle CPQ Cloud quote object storing the proposal(s) and line items.</description>
    <fields>
        <fullName>BigMachines__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BigMachines_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Amount__c</fullName>
        <label>Summary Amount</label>
        <summarizedField>BigMachines__Quote_Product__c.BigMachines__Total_Price__c</summarizedField>
        <summaryForeignKey>BigMachines__Quote_Product__c.BigMachines__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BigMachines__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BigMachines__Is_Forced_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to true from Oracle CPQ Cloud to force a primary quote to synchronize with its opportunity.</description>
        <label>Is Forced Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Line_Items__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>BigMachines__Quote_Product__c.BigMachines__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BigMachines__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>BigMachines_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Prep_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prep Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Pricebook_Id__c</fullName>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Process_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Oracle CPQ Cloud Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BigMachines__Configuration_Record__c.BigMachines__Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BigMachines__Configuration_Record__c</referenceTo>
        <relationshipLabel>Oracle Quotes and Orders</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Total_Amount__c</fullName>
        <formula>IF(BigMachines__Amount__c &gt; 0, BigMachines__Amount__c,  BigMachines__Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines__Total__c</fullName>
        <label>Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines__Transaction_Id__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <label>Bill To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Legacy_Id__c</fullName>
        <label>Bill to Legacy Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQFinalHoursCreateToApproved__c</fullName>
        <formula>IF(
NOT(ISBLANK(CreatedDate)),
ROUND( (QuoteApprovalTimeDate__c - CreatedDate) * 24, 0 ),0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ Final Hours Create To Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Oracle CPQ</relationshipLabel>
        <relationshipName>Oracle_CPQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Option__c</fullName>
        <description>BR-11808</description>
        <label>Invoice Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPrincipal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Principal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is applicable for revised quotes to indicate the current quote, if set to true, is the active quote among all revisions.</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Hours__c</fullName>
        <description>CPQ : Aishwarya</description>
        <label>Min Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTransactionId__c</fullName>
        <defaultValue>&quot;-1&quot;</defaultValue>
        <description>Parent Transaction Id is used to link a revised quote to the parent quote using the Transaction Id of the Parent Quote.</description>
        <label>ParentTransactionId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteApprovalTimeDate__c</fullName>
        <label>Quote Approval Time/Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reflects the &quot;Quote To&quot; account of the Oracle CPQ quote.</description>
        <inlineHelpText>Reflects the &quot;Quote To&quot; account of the Oracle CPQ quote.</inlineHelpText>
        <label>Quote To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oracle CPQ (Quote To Account)</relationshipLabel>
        <relationshipName>OracleCPQQuoteTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteType__c</fullName>
        <description>Reflects the &quot;Quote Type&quot; in Oracle CPQ.</description>
        <inlineHelpText>Reflects the &quot;Quote Type&quot; in Oracle CPQ.</inlineHelpText>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <label>General Sales</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <label>Service Contract New</label>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                    <label>Service Contract Amendment</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                    <label>Service Contract Renewal</label>
                </value>
                <value>
                    <fullName>OnDemand</fullName>
                </value>
                <value>
                    <fullName>Modernization</fullName>
                </value>
                <value>
                    <fullName>TandM</fullName>
                    <label>T&amp;M</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Sent_to_Customer_TS__c</fullName>
        <description>BR  - 11105</description>
        <label>Quote Sent to Customer TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quoteto__c</fullName>
        <label>Quote to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_CPQFinalApprovalHours__c</fullName>
        <formula>IF(
NOT(ISBLANK(QuoteApprovalTimeDate__c)),
ROUND( (QuoteApprovalTimeDate__c - SubmitTimeDate__c) * 24, 0 ),0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ Final Approval Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_QuoteCreatorBusinessunit__c</fullName>
        <description>Oracle CPQ - Quote Creator Business Unit - for Reporting</description>
        <label>Quote Creator Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_QuoteCreatorCountry__c</fullName>
        <description>Oracle CPQ Quote Creator Country - for Reporting</description>
        <label>Quote Creator Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolutionID__c</fullName>
        <label>Configuration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitTimeDate__c</fullName>
        <label>Submit Time/Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_QuoteSenttoCustomerTS__c</fullName>
        <description>This field is to store the value from field - Quote Sent to Customer TS. Populated in OraclequoteAfterUpdate</description>
        <label>TECH_Quote Sent to Customer TS</label>
        <type>DateTime</type>
    </fields>
    <label>Oracle Quote</label>
    <listViews>
        <fullName>BigMachines__All</fullName>
        <columns>NAME</columns>
        <columns>BigMachines__Description__c</columns>
        <columns>BigMachines__Account__c</columns>
        <columns>BigMachines__Opportunity__c</columns>
        <columns>BigMachines__Status__c</columns>
        <columns>BigMachines__Is_Primary__c</columns>
        <columns>BigMachines__Line_Items__c</columns>
        <columns>BigMachines__Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BigMachines__Orphan_Quotes</fullName>
        <columns>NAME</columns>
        <columns>BigMachines__Status__c</columns>
        <columns>BigMachines__Description__c</columns>
        <columns>BigMachines__Account__c</columns>
        <columns>BigMachines__Total_Amount__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BigMachines__Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <label>Orphan Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_T_M_Approvals</fullName>
        <columns>NAME</columns>
        <columns>BigMachines__Description__c</columns>
        <columns>QuoteType__c</columns>
        <columns>BillTo__c</columns>
        <columns>Bill_to_Legacy_Id__c</columns>
        <columns>Case__c</columns>
        <columns>Invoice_Option__c</columns>
        <columns>BigMachines__Opportunity__c</columns>
        <columns>PO_Number__c</columns>
        <columns>BigMachines__Status__c</columns>
        <columns>REP_QuoteCreatorCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteType__c</field>
            <operation>equals</operation>
            <value>TandM</value>
        </filters>
        <filters>
            <field>BigMachines__Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Global T&amp;M Approvals</label>
        <language>en_US</language>
        <sharedTo>
            <group>INTNL_SERVICE_GRP</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Quote Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Quotes and Orders</pluralLabel>
    <recordTypes>
        <fullName>BigMachines__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>